Small engine can now be hand fueled